<resources>
    <string name="app_name" translatable="false">EPCC SCC Cluster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_the_team">THE TEAM</string>
    <string name="str_chassis">CHASSIS</string>
    <string name="str_software">SOFTWARE</string>
    <string name="str_network">NETWORK</string>
    <string name="str_storage">STORAGE</string>
    <string name="str_gpu">GPU</string>
    <string name="str_memory">MEMORY</string>
    <string name="str_cpu">CPU</string>
    <string name="info_team"><font color="#d91c5c">TeamEPCC</font> consists of four students currently enrolled in the <font color="#d91c5c">MSc in High Performance Computing</font> or <font color="#d91c5c">MSc in HPC with Data Science</font>, at The University of Edinburgh. Our team is directly trained by members of EPCC staff, which our couch is also a member of. Our industry partner, <font color="#d91c5c">Boston Limited</font>, provides us support and hardware. EPCC has confirmation from the HPC Advisory Council that EPCC’s postgraduate students are eligible to participate in the competition.</string>
    <string name="info_cpu">Our cluster is running two dual socket nodes (<font color="#d91c5c">four sockets</font> total). Each socket contains an <font color="#d91c5c">Intel Xeon E5-2630 v4 (Broadwell)</font>. These CPUs were launched during the first quarter of <font color="#d91c5c">2016</font> but they are still widely used. They have <font color="#d91c5c">10 hyperthreading-capable Cores</font> running at <font color="#d91c5c">2.20 GHz</font> (3.10GHz with Turbo Boost), making a <font color="#d91c5c">total of 40 threads</font> per node.</string>
    <string name="info_gpu">Our cluster consists of <font color="#d91c5c">two nodes</font>, each one packing <font color="#d91c5c">6 NVIDIA Tesla V100s</font> with 32GB HBM2 memory (12 total). Tesla V100 have a <font color="#d91c5c">Single-Precision performance of 15.7 Tflops</font> (7.8 for Double-Precision). They have ECC (Error Correction) but we have disabled it in an attempt to gain a little bit more performance. This new version of the Tesla family also has <font color="#d91c5c">Tensor Cores</font>, specialised for AI related applications, that can run up to <font color="#d91c5c">125Tflops</font>.</string>
    <string name="info_network">We are using <font color="#d91c5c">Mellanox Infiniband</font> technology to connect the two nodes. Each node has a <font color="#d91c5c">Single-Port Mellanox ConnectX-3 MT27500</font> card capable of up to <font color="#d91c5c">56Gb/sec</font> connections. This link will only be used by the applications since we also have a <font color="#d91c5c">10 Gigabit Ethernet</font> bridge just for management.</string>
    <string name="info_chassis">The cluster will be hosted in a standard <font color="#d91c5c">8u rack</font>. Custom case, dressed for the occasion, but a standard rack nonetheless.</string>
    <string name="info_storage">For persistent storage we are using <font color="#d91c5c">Intel NVMe</font>\'s. Each node has a <font color="#d91c5c">1TB PCIe Intel P4500</font> capable of up to <font color="#d91c5c">3200 MB/s for sequential read</font> and <font color="#d91c5c">1800 MB/s for sequential write</font>. Each node also have a <font color="#d91c5c">250GB SSD</font> for the <font color="#d91c5c">boot partition</font>, leaving us the full 1TB drive for applications and benchmarking.</string>
    <string name="info_memory">Each node has <font color="#d91c5c">128GB of SDRAM</font> divided into <font color="#d91c5c">8 Micron DDR4 16GB cards running at 2400 MHz</font>.</string>
    <string name="info_software">We have used a wide variety of software in our system. We have <font color="#d91c5c">GNU</font> compilers on different versions, <font color="#d91c5c">Intel Compilers from 2016 to 2018</font> and <font color="#d91c5c">PGI 17</font>. The Intel compilers distribution is part of the <font color="#d91c5c">Intel Parallel Studio XE</font>, packing <font color="#d91c5c">Intel MPI</font> and <font color="#d91c5c">Intel MKL</font> as well. Since we built a GPU-enabled cluster, we also have multiple versions of <font color="#d91c5c">CUDA</font> (9.0, 9.1 and 9.2) installed. All running on <font color="#d91c5c">CentOS 7.5</font>.</string>
</resources>
