<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uoe.epcc.scc.epccscccluster.MainActivity">

    <ImageView
        android:id="@+id/img_cluster"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sample_server" />

    <Button
        android:id="@+id/opt_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/str_the_team"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_cluster"
        app:layout_constraintEnd_toEndOf="@+id/img_cluster"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_chassis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="@string/str_chassis"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_cluster"
        app:layout_constraintStart_toStartOf="@+id/img_cluster"
        app:layout_constraintTop_toBottomOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_cooling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_cooling"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/img_cluster"
        app:layout_constraintTop_toBottomOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_network"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_cluster"
        app:layout_constraintTop_toBottomOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_storage"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_cluster"
        app:layout_constraintEnd_toStartOf="@+id/img_cluster"
        app:layout_constraintTop_toTopOf="@+id/img_cluster"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/opt_gpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_gpu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_cluster"
        app:layout_constraintStart_toEndOf="@+id/img_cluster"
        app:layout_constraintTop_toTopOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/str_memory"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/img_cluster"
        app:layout_constraintEnd_toStartOf="@+id/img_cluster" />

    <Button
        android:id="@+id/opt_cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/str_cpu"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/img_cluster"
        app:layout_constraintStart_toEndOf="@+id/img_cluster" />

    <Button
        android:id="@+id/btn_locale_en"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/locale_en"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_locale_es" />

    <Button
        android:id="@+id/btn_locale_es"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/locale_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
